--- a/structure.yml
+++ b/structure.yml
@@ -1,5 +1,4 @@
 ---
-# Domain Objects
 imports:
   - eka.shorthands.types.* # Provides type shorthands.
   - services # #ToDo: Think of using python style "as" keyword.
@@ -31,67 +30,20 @@ structure:
         fields:
           id: Sessions.user
 
-      Shop: # The same structure is used to define, both the data and the UI schemas.
-        type: object # id is assumed to be the param for read requests.
-        fields:
-          id: integer
-          namße: string
-          address: string
-          dit: Duration
-          rating: double
-          avgCost: double
-          Tags: List<string>
-          Cuisines: List<string>
-          Offers: List<Offer> # #ToDo: Define an offer object, which would allow a free dessert of values less than fifty rupees, for orders of value greater than 150.
-        error: shop-fetch-failed
+      shop: server.shop # #Note: This is an implicit import from configs/shop.yml.
+
+      promo: server.promo
 
       Shops:
         type: Map # #Later: The notation Map<Shop> could be used, after the implementation of DSL parsing.
         element: shop
         # The id is assumed to be the mapKey. Alternatively, it could be map<shop.id, shop>.
         params: # This maps to the resource /Shops/{CustomerLocation}
-          CustomerLocation: CustomerLocation #ToDo: Figure out the default representation of complex objects in queries. They could be inline JSON or multiple query parameters. ie: The representation of this field could be ?CustomerLocation={x,y} or ?lat=x&long=y.
-          # Note: When all expect one fields are optional, the expected field becomes the default.
-          searchText:
-            value: searchText
-            optional: true
+          CustomerLocation: CustomerLocation # The field is required, as it isn't explicitly marked as optional.
 
-      Article:
-        fields:
-          id: integer
-          shop: [integer] # The value could also be a list of providers.
-          classification: string
-          count: integer
-          unitPrice: double
-          taxPercentage: 0.05 # This is interpreted as hard-coded value, as it doesn't match any other variable.
-          cost:
-            value: count * unitPrice
-            scope: local
-          taxes:
-            value: cost * taxPercentage
-            scope: local
-          addedTime: when(existing == null, currentTime())
-          Customizations:
-              customization_1:
-                name: string
-                cost: 10
-        actions: # The scope of actions, is always, ui.
-          addToCart:
-            title: '+'
-            actions:
-              - Cart[Shop] = Shops[id]
-              - customize()
-              - count = count + 1
-          removeFromCart:
-            title: '-'
-            enabled: count > 0
-            actions:
-              - count = count - 1
-              - addedTime = null
-
-      Articles:
-        params:
-          shop: Shop.id
+        filter: CustomerLocation => services.isShopWithinRadius(CustomerLocation, Config.deliveryRange) # The table shop is inferred to be iterated from the element type (shop).
+        limit: 100
+        orderBy: shop.rating, descending
 
   UI:
     type: group
@@ -103,82 +55,110 @@ structure:
       Filters:
         children:
           # locationFilter: Shop => Shop[dit] <= Config[maxDIT] #
-          tagFilter: Shop => hasMatch(Shop.Tags, FiltersSelection.AppliedTagFilters) # #Note: The function itself, should be optimized for empty lists.
+          tagFilter: Shop => hasMatch(Shop.Tags, FiltersSelection.AppliedTagFilters) # #Note: The function itself, should be optimized for empty lists. Variable dependency too should be taken care of.
           # cuisineFilter: Shop => hasMatch(Shop.Tags, FiltersSelection.AppliedTagFilters)
-          searchFilter: Shop => when(searchText, has(Shop[name], searchText)) # Returning 'undefined' is interpreted as not filtered.
+          searchFilter: Shop => when(searchText, has(Shop[name], searchText)) # Returning 'undefined' is interpreted as not filtered. #Note: The same filters could be used on the server side too.
+
+      Shop:
+        action: SelectedShop = Shop # The default action is a touch or a click.
+
+      Dish:
+        providers: server.Dish
+        actions: # The scope of actions, is always, ui.
+          addToCart:
+            title: '+'
+            sequence:
+              - Cart[Shop] = Shops[id]
+              - customize()
+              - count = count + 1
+          removeFromCart:
+            title: '-'
+            enabled: count > 0
+            sequence:
+              - count = count - 1
+              - addedTime = null
 
       App:
         type: ui
         nodes:
-          Tabs:
-            type: tree # It's used for readability, by wrapping its elements under *nodes* properties.
-            nodes:
-              Home:
-                CustomerLocation: location, services.getCurrentLocation(CustomerLocation)
+          MainScreen:
+            Tabs:
+              # type: tree # It's used for readability, by wrapping its elements under *nodes* properties.
+              # tree: {}
+              nodes:
+                Home:
+                  nodes:
+                    CustomerLocation: services.getCurrentLocation(CustomerLocation)
 
-              Explore:
-                searchText: plugins.autoFill(searchText)
+                    FiltersSelection:
+                      fields: # #Note: The type of the resource is inferred to be 'object' due to the existence of the property, fields.
+                        Tags:
+                          hasOffers:
+                            type: boolean
+                            value: False
+                          isPureVeg:
+                            type: boolean
+                            value: False # #Note: The value signifies, whether the filter is applied or not.
+                        AppliedTagFilters: filter(Filter.Tags, true) # #Note: The key is used for caching the function results. There is a plan to implement lazy evaluation, on functions, so that there won't be a need for explicit caching.
 
-          TabSwitcher:
-              type: ui.tabSwitcher
-              config:
-                tabs: App.Tabs
+                    Promos: Map<promo> # This essentially is a shorthand for a map of promos, with promo[id] as its mapKey.
 
-        FiltersSelection:
-          fields: # #Note: The type of the resource is inferred to be 'object' due to the existence of the property, fields.
-            Tags:
-              hasOffers:
-                type: boolean
-                value: False
-              isPureVeg:
-                type: boolean
-                value: False # #Note: The value signifies, whether the filter is applied or not.
-            AppliedTagFilters: filter(Filter.Tags, true) # #Note: The key is used for caching the function results. There is a plan to implement lazy evaluation, on functions, so that there won't be a need for explicit caching.
+                    ShopSelector:
+                      fields: # #ToDo: Implement an action.
+                        sortOrder: [dit, avgCost, rating]
+                        Shops:
+                          type: List<Shop>
+                          value: Shops
+                          filter: cascade(Filters.tagFilter, Filters.cuisineFilter, Filters.searchFilter)
+                          sortOrder: sortOrder
 
-      ShopSelector:
-        fields: # #ToDo: Implement an action.
-          sortKey: [dit, avgCost, rating]
-          Shops:
-            type: List<Shop>
-            filter: cascade(Filters.tagFilter, Filters.cuisineFilter, Filters.searchFilter)
-            sortKey: sortKey
+                Explore:
+                  nodes:
+                    searchText:
+                      value: searchText
+                      handler: plugins.autoFill
+                      config:
+                        limit: 10
 
-  Cart:
-    providers: [shared] # #Note: This essentially is prototypal inheritance and are recursive (multi-level).
-    fields:
-      Shop: when(existing, confirm("Want to discard items from $existing[name] and buy from $incoming[name]?", existing, incoming)) # A Shop would be passed to the setter, for further action. #Note: The function would be called only when there's an existing value.
-      id: Shop[id]
-      title:
-        value: Shop[name]
-        scope: ui
-      Articles: # #ToDo: Figure out the way to mimic the required behaviour of representing articles with different customizations as different items.
-        type: list
-        elementType: Article
-        orderBy: Article.addedTime
-        filter: Article[shop] == Cart[Shop][id]
-      subTotal:
-        map(Articles, Article => Article.count * Article.unitPrice)
-        # SELECT Article.count * Article.unitPrice from Articles
-        # sum(Articles.count * Articles.unitPrice) # In which the Articles.cost is an enumerator (like that of Python's Pandas).
-      taxes: reduce(Articles, 0, (Article, trailing => trailing += Article.taxes))
-      netTotal: subTotal + deliveryCharge + Taxes
-      createdAt:
-        value: currentTime()
-        scope: store
+                Cart:
+                  providers: [shared] # #Note: This essentially is prototypal inheritance and are recursive (multi-level).
+                  fields:
+                    Shop: when(existing, confirm("Want to discard items from $existing[name] and buy from $incoming[name]?", existing, incoming)) # A shop would be passed to the setter, for further action. #Note: The function would be called only when there's an existing value.
+                    id: Shop[id]
+                    title:
+                      value: Shop[name]
+                      scope: ui
+                    Dishes: # #ToDo: Figure out the way to mimic the required behavior of representing articles with different customizations as different items.
+                      type: list
+                      elementType: Dish
+                      orderBy: Dish.addedTime
+                      filter: Dish[shop] == Cart[Shop][id]
+                    subTotal:
+                      map(Dishes, Dish => Dish.count * Dish.unitPrice)
+                      # SELECT Dish.count * Dish.unitPrice from Dishes
+                      # sum(Dishes.count * Dishes.unitPrice) # In which the Dishes.cost is an enumerator (like that of Python's Pandas).
+                    taxes: reduce(Dishes, 0, (Dish, trailing => trailing += Dish.taxes))
+                    netTotal: subTotal + deliveryCharge + Taxes
+                    createdAt:
+                      value: currentTime()
+                      scope: store
 
-      deliveryCharge:
-        function: case
-        param: Cart[subTotal]
-        cases:
-          param > Config[freeDeliveryMinimum] : 0
-          default : Config[deliveryCharge]
+                    deliveryCharge:
+                      function: case
+                      param: Cart[subTotal]
+                      cases:
+                        param > Config[freeDeliveryMinimum]: 0
+                        default: Config[deliveryCharge]
 
-  Promos: Map<Promo> # This essentially is a shorthand for Promos is a map, with Promo[id] as its mapKey.
+              Account: {}
 
-  Promo:
-    id: string
-    effect: {} # Should be an effect overriding the Cart.
+            TabSwitcher:
+                type: ui.tabSwitcher
+                config:
+                  tabs: App.Tabs
 
-  Menu:
-    shop: integer
-    Articles: [Article...]
+          Dishes:
+            type: List # No UI spec is given as it would be rendered as a simple, scrollable list.
+            element: Dish
+            params:
+              shop: SelectedShop.id # This essentially queries /Dish?shop=<x>, when the list is empty.
